--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
     env_file:
       - ./.env
   web:
-    build: aesmirnov/yamdb_final:latest
+    image: aesmirnov/yamdb_final:latest
     depends_on:
       - db
     restart: always
