--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -1,9 +1,6 @@
 name: yamdb_workflow.yml
 
-on:
-  push:
-    branches:
-      - master
+on: push
 
 jobs:
   tests:
@@ -14,7 +11,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.7
+        python-version: ["3.7", "3.8", "3.9", "3.10"]
 
     - name: Install dependencies
       run: | 
@@ -55,6 +52,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
+    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
     steps:
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
@@ -66,6 +64,7 @@ jobs:
           script: |
             sudo docker-compose stop
             sudo docker-compose rm web
+            rm -f .env
             touch .env
             echo DEPLOY_HOST=${{ secrets.DEPLOY_HOST }} >> .env
             echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env
