--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -1,19 +1,42 @@
 server {
     listen 80;
-
-    server_name 51.250.71.107;
-
+    server_name 51.250.71.107 smirnovyamdbfinal.ddns.net;
+    location / {
+        return 301 https://$host$request_uri;
+    }
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
     location /static/ {
         root /var/html/;
     }
-
     location /media/ {
         root /var/html/;
     }
-
     location / {
         proxy_pass http://web:8000;
     }
+    server_tokens off;
+}
 
+server {
+    listen 443 ssl;
+    server_name 51.250.71.107 smirnovyamdbfinal.ddns.net;
+    ssl_certificate /etc/letsencrypt/live/smirnovyamdbfinal.ddns.net/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/smirnovyamdbfinal.ddns.net/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    location / {
+        proxy_pass http://smirnovyamdbfinal.ddns.net;
+    }
+    location /static/ {
+        root /var/html/;
+    }
+    location /media/ {
+        root /var/html/;
+    }
+    location / {
+        proxy_pass http://web:8000;
+    }
     server_tokens off;
 }
