--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -1,9 +1,7 @@
 server {
     listen 80;
-    server_name 51.250.71.107 smirnovyamdbfinal.ddns.net;
-    location / {
-        return 301 https://$host$request_uri;
-    }
+    server_name smirnovyamdbfinal.ddns.net;
+    server_tokens off;
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
@@ -14,6 +12,9 @@ server {
         root /var/html/;
     }
     location / {
+        return 301 https://$host$request_uri;
+    }
+    location / {
         proxy_pass http://web:8000;
     }
     server_tokens off;
@@ -21,22 +22,23 @@ server {
 
 server {
     listen 443 ssl;
-    server_name 51.250.71.107 smirnovyamdbfinal.ddns.net;
+    server_name smirnovyamdbfinal.ddns.net;
+    server_tokens off;
     ssl_certificate /etc/letsencrypt/live/smirnovyamdbfinal.ddns.net/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/smirnovyamdbfinal.ddns.net/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
     location / {
         proxy_pass http://smirnovyamdbfinal.ddns.net;
+        proxy_set_header    Host                $http_host;
+        proxy_set_header    X-Real-IP           $remote_addr;
+        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
     }
     location /static/ {
         root /var/html/;
     }
     location /media/ {
         root /var/html/;
-    }
-    location / {
-        proxy_pass http://web:8000;
     }
     server_tokens off;
 }
